Fixed some brokenness leading to the scrollbar disappearing and the optionsbox failing. The solution was, I had accidentally made the playlist container "flex", which caused the playlist to collapse and fail to initialize the scrollbar. Then, the optionsbox was getting compressed by the same pane.

--- a/css/custom.css
+++ b/css/custom.css
@@ -593,12 +593,17 @@ html.touchevents section {
 
 .playlist-container {
 	flex: 1 1 auto;
+	flex-direction: column;
 	position:relative;
 	height: 100%;
 	overflow:hidden;
 }
 
-.playlist {  position: relative; overflow:hidden; height: 100%; }
+.playlist {
+	position: relative;
+	overflow:hidden;
+	height: 100%;
+}
 
 .playlist>li {
 	padding: 0 10px;
